welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:19: error: not found: value doghouse
doghouse()
^